--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-       
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "*",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.4",
         "maatwebsite/excel": "^3.1",
